[gd_scene load_steps=3 format=2]

[ext_resource path="res://characters/living_entity/LivingEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/hostile_entity/HostileEntity.gd" type="Script" id=2]

[node name="HostileEntity" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sight" type="Area2D" parent="." index="1"]
collision_layer = 4

[node name="Radius" type="CollisionShape2D" parent="Sight" index="0"]

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
